--- a/Rstuff/olr/DESCRIPTION
+++ b/Rstuff/olr/DESCRIPTION
@@ -8,7 +8,7 @@ Description: This package holds an optimal linear regression function which runs
   equations. The olr function returns the equation that has the greatest adjusted R-squared term or the greatest R-squared term.
   Essentially, the olr function returns the best fit equation out of all the possible equations. Complimentary functions are included
   which list all of the equations, all of the equations in ascending order, a function to give the user a specific model's summary, 
-  and the list of adjusted R-squared terms & R-squared terms. There is also a Python version avaiable online at https://pypi.org/project/olr/.
+  and the list of adjusted R-squared terms & R-squared terms. Also, a Python version is available at: https://pypi.org/project/olr/.
 URL: https://github.com/MatHatter, https://pypi.org/project/olr/
 License: GPL-3
 Encoding: UTF-8
