--- a/Rstuff/olr/DESCRIPTION
+++ b/Rstuff/olr/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: olr
 Title: Optimal Linear Regression
 Version: 1.0.0.2000
-Date: 2019-11-28
+Date: 2019-12-03
 Author: Mathew Fok
 Maintainer: Mathew Fok <mfok@stevens.edu>
-Description: This package holds an optimal linear regression function which runs all the possible combinations of linear regression
+Description: The optimal linear regression function olr, runs all the possible combinations of linear regression
   equations. The olr function returns the equation that has the greatest adjusted R-squared term or the greatest R-squared term.
   Essentially, the olr function returns the best fit equation out of all the possible equations. Complimentary functions are included
   which list all of the equations, all of the equations in ascending order, a function to give the user a specific model's summary, 
