--- a/Rstuff/olr/NAMESPACE
+++ b/Rstuff/olr/NAMESPACE
@@ -6,4 +6,6 @@ export(olrformulaorder)
 export(olrformulas)
 export(olrmodels)
 export(r2list)
+import(plyr)
+import(stats)
 importFrom(utils,combn)
