--- a/Rstuff/olr/DESCRIPTION
+++ b/Rstuff/olr/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: olr
 Title: Optimal Linear Regression
-Version: 1.0.0.2000
-Date: 2019-12-03
+Version: 1.0.0.3000
+Date: 2019-12-09
 Author: Mathew Fok
 Maintainer: Mathew Fok <mfok@stevens.edu>
 Description: The optimal linear regression function olr, runs all the possible combinations of linear regression
@@ -13,5 +13,5 @@ URL: https://github.com/MatHatter, https://pypi.org/project/olr/
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports: plyr
+Imports: plyr, utils, stats
 RoxygenNote: 6.1.1.9000
