--- a/Rstuff/olr/DESCRIPTION
+++ b/Rstuff/olr/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: olr
 Title: Optimal Linear Regression
-Version: 1.0.0.3000
-Date: 2019-12-09
+Version: 1.0
+Date: 2019-12-10
 Author: Mathew Fok
 Maintainer: Mathew Fok <mfok@stevens.edu>
-Description: The optimal linear regression function olr, runs all the possible combinations of linear regression
-  equations. The olr function returns the equation that has the greatest adjusted R-squared term or the greatest R-squared term.
-  Essentially, the olr function returns the best fit equation out of all the possible equations. Complimentary functions are included
+Description: The optimal linear regression olr(), runs all the possible combinations of linear regression
+  equations. The olr() returns the equation that has the greatest adjusted R-squared term or the greatest R-squared term.
+  Essentially, the olr() returns the best fit equation out of all the possible equations. Complimentary functions are included
   which list all of the equations, all of the equations in ascending order, a function to give the user a specific model's summary, 
-  and the list of adjusted R-squared terms & R-squared terms. Also, a Python version is available at: https://pypi.org/project/olr/.
+  and the list of adjusted R-squared terms & R-squared terms. Also, a Python version is available at: <https://pypi.org/project/olr/>.
 URL: https://github.com/MatHatter, https://pypi.org/project/olr/
 License: GPL-3
 Encoding: UTF-8
