--- a/Rstuff/olr/DESCRIPTION
+++ b/Rstuff/olr/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: olr
 Title: Optimal Linear Regression
 Version: 1.1
-Date: 2019-12-28
+Date: 2020-01-07
 Author: Mathew Fok
 Maintainer: Mathew Fok <mfok@stevens.edu>
 Description: The optimal linear regression olr(), runs all the possible combinations of linear regression
-  equations. The olr() returns the equation that has the greatest adjusted R-squared term or the greatest R-squared term.
-  Essentially, the olr() returns the best fit equation out of all the possible equations. Adding an additional explanatory variable to 
-  the regression equation increases the R-squared or adjusted R-squared terms even if the variable is not 'significant'. 
-  Thus, adjusted R-squared was preferred, but this was developed to eliminate that conundrum. Complimentary functions are 
-  included which list all of the equations, all of the equations in ascending order, a function to give the 
-  user a specific model's summary, and the list of adjusted R-squared terms & R-squared terms.
-  Also, a 'Python' version is available at: <https://pypi.org/project/olr/>.
+  equations. The olr() returns the equation which has the greatest adjusted R-squared term or the greatest R-squared term based
+  on the user's discretion. Essentially, the olr() returns the best fit equation out of all the possible equations. R-squared increases 
+  with the addition of an explanatory variable whether it is 'significant' or not, thus this was developed to eliminate that conundrum. 
+  Adjusted R-squared is preferred to overcome this phenomenon, but each combination will still produce different results and this will
+  return the best one. Complimentary functions are included which list all of the equations, all of the equations in ascending order, 
+  a function to give the user a specific model's summary, and the list of adjusted R-squared terms & R-squared terms.
+  A 'Python' version is available at: <https://pypi.org/project/olr/>.
 URL: https://github.com/MatHatter, https://pypi.org/project/olr/
 License: GPL-3
 Encoding: UTF-8
