--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(olrmodels)
 export(r2list)
 import(plyr)
 import(stats)
+importFrom(htmltools,HTML)
 importFrom(readxl,read_excel)
 importFrom(utils,combn)
 importFrom(utils,read.csv)
